<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- 0 Экран (сплэш) -->
    <string name="app_name">Real Optimizer</string>
    <string name="boostLoad">Boost</string>
    <string name="clean">Clean</string>
    <string name="optimize">Optimize</string>
    <string name="degreece">°C</string>
    <string name="degreeceF">°F</string>

    <!-- 1 Экран Главный -->
    <string name="cpu">CPU</string>
    <string name="coolsystem">Temperature</string>
    <string name="rom">ROM</string>
    <string name="CacheFiles"><![CDATA[Cache & Files]]></string>
    <string name="ram">RAM</string>
    <string name="boostMemory">Memory</string>
    <string name="cool">Cool</string>
    <string name="clear">Clear</string>
    <string name="boost">Boost</string>

    <!-- 2 Экран Настройки -->
    <string name="appinfo">App info</string>
    <string name="setting">Settings</string>
    <string name="lang">Language</string>
    <string name="temp">Temperature</string>
    <string name="policity">Privacy Policy</string>
    <string name="english">English</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string-array name="langArray">
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
        <item>日本語</item>
        <item>ไทย</item>
        <item>Indonesia</item>
        <item>Français</item>
        <item>中文</item>
        <item>Türkçe</item>
        <item>Română</item>
        <item>Polski</item>
        <item>Bahasa Melayu</item>
        <item>한국어</item>
        <item>Tiếng việt</item>
    </string-array>

    <string-array name="langLocaleArray">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
        <item>ja</item>
        <item>th</item>
        <item>in</item>
        <item>fr</item>
        <item>zh</item>
        <item>tr</item>
        <item>ro</item>
        <item>pl</item>
        <item>ms</item>
        <item>ko</item>
        <item>vi</item>
    </string-array>

    <!-- 3 Экраны Гориз. Графиков -->
    <string name="coolsystem2">System Temperature</string>
    <string name="boostMemory2">RAM Memory</string>
    <string name="start">Start</string>

    <!-- 4 Экраны результата -->
    <string name="system_cooled">System Cooled</string>
    <string name="system_cleared">System Cleared</string>
    <string name="memory_boosted">Memory Boosted</string>

    <string name="empty_cache">Empty cache</string>
    <string name="scanning">Scaning</string>

    <!-- Rationales -->
    <string name="rationale_title">Insufficient permissions</string>
    <string name="rationale_storage">Requires storage permission to clear the external cache.</string>
    <string name="permission_cus_title">Importent Note</string>
    <string name="permission_cus_msg">You must grant this permission for app to work correctly!</string>
    <string name="exit">Confirm</string>
    <string name="content">Did you want to exit app !?</string>
    <string name="agree">Exit</string>
    <string name="disagree">Cancle</string>
    <string name="rate">Rate Us</string>
    <string name="temperature">°C</string>
    <string name="action_back">Back</string>
    <string name="action_menu">Menu</string>

    <string name="info1">Real Optimizer - system cleaner and cache cleaner for Android. \n\nIt will improve phone performance and increase phone speed.

You can use this app to clear ram memory fast and easy, just in one tap.</string>
    <string name="info2">1. Bug Fix\n\n2. New Languages\n\n3. Optimization</string>
    <string name="version">Version 1.2</string>
    <string name="whatnew">New</string>
    <string name="policy"> Helios Tech built the Real Optimizer app as an Ad Supported app. This SERVICE is provided by Helios Tech at no cost and is intended for use as is.

\n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Real Optimizer unless otherwise defined in this Privacy Policy.

\n\nInformation Collection and Use

\n\nFor a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.

\n\nThe app does use third party services that may collect information used to identify you.

\n\nLink to privacy policy of third party service providers used by the app

    \n\nGoogle Play Services
    \nAdMob
    \nFirebase Analytics
    \nFacebook
    \nOneSignal
    \nAppMetrica

\n\nLog Data

\n\nWe want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

\n\nCookies

\n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

\n\nService Providers

\n\nWe may employ third-party companies and individuals due to the following reasons:

    \n\nTo facilitate our Service;
    \nTo provide the Service on our behalf;
    \nTo perform Service-related services; or
    \nTo assist us in analyzing how our Service is used.

\n\nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

\n\nSecurity

\n\nWe value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

\n\nLinks to Other Sites

\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

\n\nChildren’s Privacy

\n\nThese Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

\n\nChanges to This Privacy Policy

\n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

\n\nContact Us

\n\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us. </string>

    <string name="rateUs">Please rate our App.\nYour feedback is very important for us!</string>
    <string name="stars5">5 stars</string>
    <string name="stars4"><![CDATA[<4 Stars]]></string>
    <string name="comment">Your comment:</string>
    <string name="email">Your e-mail:</string>
    <string name="name">Your name:</string>
    <string name="send">Send</string>

    <!--<string name="appID">ca-app-pub-2215717436233572~1249419254</string>-->
    <!--<string name="bannerID">ca-app-pub-2215717436233572/5930619421</string>-->
    <!--<string name="bannerIDSysOpt">ca-app-pub-2215717436233572/9588793527</string>-->
    <!--<string name="bannerIDSplit">ca-app-pub-2215717436233572/3374981843</string>-->

    <!--<string name="banner300x250">ca-app-pub-2215717436233572/5560670797</string>-->

    <!--<string name="intersentialID">ca-app-pub-2215717436233572/9370460545</string>-->
    <!--<string name="intersentialIDSysOpt">ca-app-pub-2215717436233572/5130673765</string>-->
    <!--<string name="intersentialIDfirst">ca-app-pub-2215717436233572/9782508872</string>-->

    <string name="appID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bannerID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bannerIDSysOpt">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bannerIDSplit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="nativeADMOB_AD_UNIT_ID">ca-app-pub-3940256099942544/2247696110</string>
    <string name="nativeADMOB_AD_UNIT_ID_finish">ca-app-pub-3940256099942544/2247696110</string>
    <string name="banner300x250">ca-app-pub-3940256099942544/6300978111</string>

    <string name="intersentialID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersentialIDSysOpt">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersentialIDfirst">ca-app-pub-3940256099942544/1033173712</string>

    <string name="ad_attribution">Ad</string>
    <string name="facebook_app_id">5656565656</string>
    <string name="fb_login_protocol_scheme">fb5656565656</string>
    <string name="pleaseWait">Please Wait…</string>
    <string name="send_mail_wait">Send mail wait</string>
    <string name="send_mail_body">Send mail body</string>
    <string name="done">Done</string>
    <string name="textBtn">Finish system optimization</string>
    <string name="textBtn2">For better phone performance</string>
    <string name="sys_optimization">System Optimization</string>
    <string name="btn_go">GO</string>
    <string name="press_for_exit">Press once again to exit!</string>
    <string name="mb">Mb</string>
</resources>
